--- a/Client/Views/ChatUC.xaml
+++ b/Client/Views/ChatUC.xaml
@@ -6,6 +6,7 @@
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:utility="clr-namespace:Client.Utility"
              xmlns:models="clr-namespace:Client.Models"
+             xmlns:icons="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:dd="urn:gong-wpf-dragdrop"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" >
@@ -38,6 +39,54 @@
                 </Style.Triggers>
             </Style>
 
+            <ControlTemplate x:Key="ModernCheckBox" TargetType="CheckBox">
+                <Border x:Name="border" Width="30" Height="30" Background="DarkRed" BorderBrush="Black" BorderThickness="2" CornerRadius="5">
+                    <icons:PackIconMaterialDesign x:Name="icon" Kind="Check" Width="22" Height="22" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                </Border>
+
+                <ControlTemplate.Triggers>
+                    <Trigger Property="IsChecked" Value="True">
+                        <Setter TargetName="border" Property="Background" Value="GreenYellow"/>
+                    </Trigger>
+                    <Trigger Property="IsChecked" Value="False">
+                        <Setter TargetName="border" Property="Background" Value="DarkRed"/>
+                        <Setter TargetName="icon" Property="Visibility" Value="Hidden"/>
+                    </Trigger>
+                    <Trigger Property="IsChecked" Value="{x:Null}">
+                        <Setter TargetName="border" Property="Background" Value="Transparent"/>
+                        <Setter TargetName="icon" Property="Visibility" Value="Hidden"/>
+                    </Trigger>
+                    <MultiTrigger>
+                        <MultiTrigger.Conditions>
+                            <Condition Property="IsMouseOver" Value="True"/>
+                            <Condition Property="IsChecked" Value="True"/>
+                        </MultiTrigger.Conditions>
+                        <MultiTrigger.Setters>
+                            <Setter TargetName="border" Property="BorderBrush" Value="Gray"/>
+                            <Setter TargetName="border" Property="Effect">
+                                <Setter.Value>
+                                    <DropShadowEffect Color="Black" ShadowDepth="3" BlurRadius="2"/>
+                                </Setter.Value>
+                            </Setter>
+                        </MultiTrigger.Setters>
+                    </MultiTrigger>
+                    <MultiTrigger>
+                        <MultiTrigger.Conditions>
+                            <Condition Property="IsMouseOver" Value="True"/>
+                            <Condition Property="IsChecked" Value="False"/>
+                        </MultiTrigger.Conditions>
+                        <MultiTrigger.Setters>
+                            <Setter TargetName="border" Property="BorderBrush" Value="Gray"/>
+                            <Setter TargetName="border" Property="Effect">
+                                <Setter.Value>
+                                    <DropShadowEffect Color="Black" ShadowDepth="3" BlurRadius="2"/>
+                                </Setter.Value>
+                            </Setter>
+                        </MultiTrigger.Setters>
+                    </MultiTrigger>
+                </ControlTemplate.Triggers>
+            </ControlTemplate>
+
         </ResourceDictionary>
     </UserControl.Resources>
 
@@ -65,7 +114,7 @@
             <TextBlock DockPanel.Dock="Left" Margin="20,0,0,0" Text="{Binding Path=Chat.UserIsWriting}" FontSize="30" Foreground="{StaticResource WritingForeground}"/>
 
             <Image DockPanel.Dock="Right" Style="{StaticResource AvatarImageStyle}"/>
-            <Button IsEnabled="{Binding Path=Chat.CanWrite}" DockPanel.Dock="Right" Content="Edit chat" Margin="5" Background="{StaticResource ButtonBackground}" Command="{Binding EditChatCommand}">
+            <Button IsEnabled="{Binding Path=Chat.CanWrite}" DockPanel.Dock="Right" Content="Edit chat" Margin="0,0,10,0" Height="40" Background="{StaticResource ButtonBackground}" Command="{Binding EditChatCommand}">
                 <Button.Style>
                     <Style BasedOn="{StaticResource ButtonStyle}" TargetType="Button">
                         <Style.Triggers>
@@ -76,9 +125,11 @@
                     </Style>
                 </Button.Style>
             </Button>
-            <Button DockPanel.Dock="Right" Content="Leave" Margin="5" Style="{StaticResource ButtonStyle}" Command="{Binding LeaveChatCommand}"/>
+            <Button DockPanel.Dock="Right" Content="Leave" Margin="0,0,10,0" Height="40" Style="{StaticResource ButtonStyle}" Command="{Binding LeaveChatCommand}"/>
 
-            <CheckBox IsChecked="{Binding Path=IsMute}" Command="{Binding MuteChangedCommand}" Cursor="Hand" IsThreeState="True"/>
+            <CheckBox x:Name="canNotifyCheckBox" IsChecked="{Binding Path=CanNotify}" Cursor="Hand" IsThreeState="True" DockPanel.Dock="Right" Margin="0,0,10,0" Template="{StaticResource ModernCheckBox}" Command="{Binding CanNotifyChangedCommand}" Click="canNotifyCheckBox_Click"/>
+
+            <TextBlock x:Name="canNotifyText" Text="" DockPanel.Dock="Right" Margin="0,0,10,0" VerticalAlignment="Center" FontSize="14"/>
         </DockPanel>
 
         <Image Grid.Row="1" VerticalAlignment="Top" Margin="0,10,0,0" Source="/Resources/loader.png" Visibility="{Binding Path=LoaderVisibility}" Width="50" Height="50" Panel.ZIndex="1">
