--- a/Client/WindowResources/SettingsResources.xaml
+++ b/Client/WindowResources/SettingsResources.xaml
@@ -22,18 +22,13 @@
 
     <Style x:Key="ButtonSettingsStyle" BasedOn="{StaticResource ButtonStyle}" TargetType="Button">
         <Setter Property="Height" Value="40"/>
-        <Setter Property="MinWidth" Value="120"/>
-        <Setter Property="MaxWidth" Value="300"/>
         <Setter Property="MaxHeight" Value="40"/>
         <Setter Property="MinHeight" Value="30"/>
+        <Setter Property="MaxWidth" Value="300"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Margin" Value="10,0"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
     </Style>
-
-    <!--<Style x:Key="TextStyle" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="18"/>
-        <Setter Property="Foreground" Value="Black"/>
-    </Style>-->
 
     <Style x:Key="TextBoxStyle" TargetType="TextBox">
         <Setter Property="VerticalAlignment" Value="Center"/>
