Settings UI fixe

--- a/Client/WindowResources/SettingsResources.xaml
+++ b/Client/WindowResources/SettingsResources.xaml
@@ -14,7 +14,8 @@
 
     <Style x:Key="MiniHeaderStyle" TargetType="TextBlock">
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Margin" Value="30,0,0,0"/>
         <Setter Property="FontSize" Value="18"/>
         <Setter Property="FontWeight" Value="DemiBold"/>
         <Setter Property="Foreground" Value="MintCream"/>
